release v3.3: allow changing scroll speed for long counter names, auto-resize counter text to stop numbers from overflowing circle button, randomize notification verses, and add slide-out animation when a counter is deleted

--- a/src/index.css
+++ b/src/index.css
@@ -409,7 +409,7 @@ MdModeEditOutline {
 }
 
 .single-counter-counter-name {
-  font-size: 1.3rem;
+  /* font-size: 1.3rem; */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
